--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+.container > div{
+  background-color: yellow;
+   /*  height:50px; */
+}
+
+#root{
+  display:flex;
+  justify-content: center;
+  align-content: center;
+}
+.container{
+  display:grid;
+  width:100%;
+  height:100vh;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows:25% 25% 25% 25%;
+  gap:5px;
+  padding:10px;
+  border:solid 1px;
+}
+.item1{
+  grid-column:1/6;
+}
+.item2{
+  grid-area:2/1/span 3/span 1;
+}
+.item3{
+  grid-area:2/5/span 3/span 1;
+}
+.item4{
+  grid-area:2/2/span 2/span 1;
+}
+.item5{
+  grid-area:2/3/span 2/span 1;
+}
+.item6{
+  grid-area:2/4/span 2/span 1;
+}
